# LocalForge

./: .dockerignore  .env  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  localforge.db  localforge.example.json  localforge.json  package-lock.json  package.json  pyproject.toml  requirements.txt  start.bat
.claude/: settings.local.json
LocalForge-App/: capacitor.config.ts  ionic.config.json  package-lock.json  package.json
LocalForge-App/src/: App.tsx
LocalForge-App/src/api/: client.ts
LocalForge-App/src/components/: ModelPicker.tsx  (+1 more)
backend/: auth.py  config.py  email.py  localforge.json  logging_setup.py  main.py
backend/agent/: compressor.py  loop.py
backend/db/: connection.py  models_store.py  permissions_store.py  providers_store.py  settings_store.py  store.py  users_store.py
backend/middleware/: auth.py
backend/models/: anthropic.py  base.py  copilot.py  ollama_native.py  openai_compat.py  registry.py
backend/routers/: auth.py  chat.py  config.py  github_copilot.py  logs.py  models.py  permissions.py  providers.py  stats.py  update.py  users.py
backend/telegram/: bot.py
backend/tools/: base.py  filesystem.py  git_tools.py  replicate_tools.py  terminal.py  todo_tool.py  video.py  web_fetch.py  web_search.py
deploy/: deploy.sh  setup-nginx.sh  setup-service.sh
docs/: AUDITORIA_TOOL_USE.md
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
localforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+22 files in other folders)
