[project]
name = "localforge"
version = "0.1.0"
description = "Local AI agent with file system access — like OpenClaw, but yours"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "duckduckgo-search>=7.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
localforge = "backend.main:start"

[tool.setuptools.packages.find]
where = ["."]
